<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Imagen de fondo -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo_menu"
        android:scaleType="centerCrop" />

    <!-- Capa oscura -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondoOscuro" />

    <!-- Contenido -->
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/fondoOscuro"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <!-- TITULO GRANDE -->
        <TextView
            android:text="@string/titulo_menu"
            android:textSize="69sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- BOTONES GRANDES -->
        <Button
            android:id="@+id/btnPrimos"
            android:text="@string/btn_primos"
            android:textSize="22sp"
            android:backgroundTint="@color/boton"
            android:textColor="@color/textoBoton"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnPerfectos"
            android:text="@string/btn_perfectos"
            android:textSize="22sp"
            android:backgroundTint="@color/boton"
            android:textColor="@color/textoBoton"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnAmigos"
            android:text="@string/btn_amigos"
            android:textSize="22sp"
            android:backgroundTint="@color/boton"
            android:textColor="@color/textoBoton"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>